add: JS 코드 리팩토링 + css 스타일 작성

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>가위바위보</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/script.js" defer></script>
   </head>
   <body>
-    <script src="./js/script.js"></script>
+    <button class="btn scissors">가위</button>
+    <button class="btn rock">바위</button>
+    <button class="btn paper">보</button>
   </body>
 </html>
